Add homepage to docs pkg

--- a/docs/public/manifest.json
+++ b/docs/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Refractal",
+  "name": "Refractal: React Component Library",
   "icons": [
     {
       "src": "favicon.ico",
