--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "lodash.merge": "^4.6.1",
     "polished": "^1.9.0",
     "react-animations": "^1.0.0",
-    "styled-components": "^3.2.3",
     "styled-system": "^2.2.1"
   },
   "peerDependencies": {
-    "react": "^16.2.0"
+    "react": "^16.2.0",
+    "styled-components": "^3.2.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
