--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "^16.2.0",
     "react-live": "^1.10.1",
     "react-test-renderer": "^16.2.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "styled-components": "^3.2.3"
   }
 }
