--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,16 @@
 {
   "presets": [
     ["env", {
+      "modules": false,
       "targets": {
-        "browsers": ["last 2 versions", "safari >= 7"]
+        "browsers": ["last 1 version"]
       }
     }],
     "react",
     "stage-0"
+  ],
+  "plugins": [
+    "transform-object-rest-spread",
+    "transform-class-properties"
   ]
 }
