--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "refractal",
   "description": "React component library built on top of styled-components and styled-system",
   "version": "0.2.4",
-  "main": "lib/index.js",
+  "main": "lib/refractal.js",
+  "module": "lib/refractal.es.js",
   "files": [
     "lib"
   ],
@@ -14,22 +15,24 @@
   "sideEffects": false,
   "license": "MIT",
   "scripts": {
-    "build": "rimraf build && babel src -d lib",
+    "clean": "rimraf lib",
+    "build": "npm-run-all clean rollup",
     "docs": "parcel docs/index.html",
     "docs:build": "parcel build docs/index.html",
     "docs:deploy": "npm run docs:build && gh-pages -d dist",
-    "prepublishOnly": "npm run docs:deploy && npm run build",
+    "prepublishOnly": "npm-run-all docs:deploy build",
+    "rollup": "rollup -c",
     "test": "jest",
     "lint": "eslint src"
   },
   "dependencies": {
-    "lodash.merge": "^4.6.1",
-    "polished": "^1.9.0",
-    "react-animations": "^1.0.0",
-    "styled-system": "^2.2.4"
+    "lodash.merge": "^4.6.1"
   },
   "peerDependencies": {
+    "polished": "^1.9.0",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-animations": "^1.0.0",
     "styled-components": "^3.2.3",
     "styled-system": "^2.2.1"
   },
@@ -39,6 +42,7 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-module-resolver": "^2.7.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
@@ -52,14 +56,21 @@
     "jest": "^22.2.2",
     "jest-styled-components": "^5.0.0",
     "lodash": "^4.17.10",
+    "npm-run-all": "^4.1.2",
     "parcel-bundler": "^1.7.1",
-    "prop-types": "^15.6.0",
+    "polished": "^1.9.2",
+    "prop-types": "^15.6.1",
     "react": "^0.14.x || ^15.x || ^16.x",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.3.2",
     "react-live": "^1.10.1",
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.2.0",
     "rimraf": "^2.6.2",
+    "rollup": "^0.58.2",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-filesize": "^1.5.0",
     "styled-components": "^3.2.3"
   }
 }
