--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "prepublishOnly": "npm-run-all docs:deploy build",
     "rollup": "rollup -c",
     "test": "jest",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "release": "standard-version && git push --follow-tags"
   },
   "dependencies": {
     "lodash.merge": "^4.6.1",
@@ -72,6 +73,7 @@
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-filesize": "^1.5.0",
+    "standard-version": "^4.4.0",
     "styled-components": "^3.2.3"
   }
 }
