--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "scripts": {
     "clean": "rimraf lib",
     "build": "npm-run-all clean rollup",
-    "docs": "parcel docs/index.html",
-    "docs:build": "rimraf dist && parcel build docs/index.html --public-url /refractal",
+    "docs": "yarn docz dev",
+    "docs:build": "rimraf dist && yarn docz build",
     "docs:deploy": "npm run docs:build && gh-pages -d dist",
     "prepublishOnly": "npm-run-all docs:deploy build",
     "rollup": "rollup -c",
@@ -50,6 +50,9 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "docz": "^0.2.11",
+    "docz-plugin-babel6": "^0.2.11",
+    "docz-theme-default": "^0.2.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
@@ -59,13 +62,11 @@
     "jest-styled-components": "^5.0.0",
     "lodash": "^4.17.10",
     "npm-run-all": "^4.1.2",
-    "parcel-bundler": "^1.7.1",
     "polished": "^1.9.2",
     "prop-types": "^15.6.1",
     "react": "^0.14.x || ^15.x || ^16.x",
     "react-animations": "^1.0.0",
     "react-dom": "^16.3.2",
-    "react-live": "^1.10.1",
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.2.0",
     "rimraf": "^2.6.2",
@@ -73,6 +74,7 @@
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-filesize": "^1.5.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
     "standard-version": "^4.4.0",
     "styled-components": "^3.2.3"
   }
