--- a/.babelrc
+++ b/.babelrc
@@ -11,6 +11,7 @@
   "plugins": [
     "transform-export-extensions",
     "transform-object-rest-spread",
-    "transform-class-properties"
+    "transform-class-properties",
+    "transform-runtime"
   ]
 }
