--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "release": "standard-version && git push --follow-tags"
   },
   "dependencies": {
+    "lodash": "^4.17.10",
+    "lodash.capitalize": "^4.2.1",
     "lodash.merge": "^4.6.1",
+    "mdi-react": "^4.0.0",
     "styled-system": "^2.2.9"
   },
   "peerDependencies": {
@@ -46,6 +49,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
@@ -60,7 +64,6 @@
     "gh-pages": "^1.1.0",
     "jest": "^22.2.2",
     "jest-styled-components": "^5.0.0",
-    "lodash": "^4.17.10",
     "npm-run-all": "^4.1.2",
     "polished": "^1.9.2",
     "prop-types": "^15.6.1",
