--- a/.babelrc
+++ b/.babelrc
@@ -11,7 +11,6 @@
   "plugins": [
     "transform-export-extensions",
     "transform-object-rest-spread",
-    "transform-class-properties",
-    "transform-runtime"
+    "transform-class-properties"
   ]
 }
