--- a/package.json
+++ b/package.json
@@ -28,54 +28,48 @@
     "release": "standard-version && git push --follow-tags"
   },
   "dependencies": {
-    "lodash": "^4.17.10",
-    "styled-system": "^2.2.9"
+    "lodash": "^4.17.11",
+    "styled-system": "^3.1.3"
   },
   "peerDependencies": {
-    "polished": "^1.9.0",
+    "polished": "^2.0.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-animations": "^1.0.0",
-    "styled-components": "^3.2.3",
-    "styled-system": "^2.2.1"
+    "styled-components": "^3.4.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-jest": "^23.2.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-module-resolver": "^2.7.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-export-extensions": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "docz": "^0.7.0",
-    "docz-plugin-babel6": "^0.7.0",
-    "docz-theme-default": "^0.7.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "@babel/core": "^7.0.1",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^23.6.0",
+    "docz": "^0.11.2",
+    "docz-theme-default": "^0.11.2",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "enzyme-to-json": "^3.3.1",
-    "eslint-config-sappira": "^1.4.0",
+    "eslint-config-sappira": "^1.6.5",
     "gh-pages": "^1.1.0",
-    "jest": "^23.3.0",
-    "jest-styled-components": "^5.0.0",
+    "jest": "^23.6.0",
+    "jest-styled-components": "^6.2.0",
     "npm-run-all": "^4.1.2",
-    "polished": "^1.9.2",
+    "polished": "^2.0.3",
     "prop-types": "^15.6.1",
-    "react": "^0.14.x || ^15.x || ^16.x",
+    "react": "^16.5.1",
     "react-animations": "^1.0.0",
-    "react-dom": "^16.3.2",
+    "react-dom": "^16.5.1",
     "react-router-dom": "^4.2.2",
-    "react-test-renderer": "^16.2.0",
+    "react-test-renderer": "^16.5.1",
     "rimraf": "^2.6.2",
-    "rollup": "^0.62.0",
-    "rollup-plugin-babel": "^3.0.4",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-filesize": "^2.0.0",
-    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup": "^0.65.2",
+    "rollup-plugin-babel": "^4.0.3",
+    "rollup-plugin-commonjs": "^9.1.6",
+    "rollup-plugin-filesize": "^4.0.1",
+    "rollup-plugin-node-resolve": "^3.4.0",
     "standard-version": "^4.4.0",
-    "styled-components": "^3.2.3"
+    "styled-components": "^3.4.6"
   }
 }
