chore: Fix tests

--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,11 @@
     }],
     "@babel/react"
   ],
+  "env": {
+    "test": {
+      "presets": ["@babel/env"]
+    }
+  },
   "plugins": [
     "@babel/plugin-proposal-export-default-from",
     "@babel/plugin-proposal-class-properties",
