--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "release": "standard-version && git push --follow-tags"
   },
   "dependencies": {
+    "babel-core": "^7.0.0-bridge.0",
     "lodash": "^4.17.11",
-    "styled-system": "^3.1.3"
+    "styled-system": "^3.1.11"
   },
   "peerDependencies": {
     "polished": "^2.0.0",
@@ -40,9 +41,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.1",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-jest": "^23.6.0",
@@ -54,7 +55,7 @@
     "eslint-config-sappira": "^1.6.5",
     "gh-pages": "^1.1.0",
     "jest": "^23.6.0",
-    "jest-styled-components": "^6.2.0",
+    "jest-styled-components": "^6.2.1",
     "npm-run-all": "^4.1.2",
     "polished": "^2.0.3",
     "prop-types": "^15.6.1",
@@ -71,5 +72,9 @@
     "rollup-plugin-node-resolve": "^3.4.0",
     "standard-version": "^4.4.0",
     "styled-components": "^3.4.6"
+  },
+  "resolutions": {
+    "@babel/core": "^7.0.1",
+    "babel-core": "^7.0.0-bridge.0"
   }
 }
