--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "refractal",
+  "name": "molekule",
   "description": "React component library built on top of styled-components and styled-system",
   "version": "1.0.6",
-  "main": "lib/refractal.js",
-  "module": "lib/refractal.es.js",
+  "main": "lib/molekule.js",
+  "module": "lib/molekule.es.js",
   "files": [
     "lib"
   ],
@@ -28,8 +28,9 @@
     "release": "standard-version && git push --follow-tags"
   },
   "dependencies": {
-    "babel-core": "^7.0.0-bridge.0",
     "lodash": "^4.17.11",
+    "popper.js": "^1.14.4",
+    "react-portal": "^4.1.5",
     "styled-system": "^3.1.11"
   },
   "peerDependencies": {
@@ -37,44 +38,43 @@
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-animations": "^1.0.0",
-    "styled-components": "^3.4.0"
+    "styled-components": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.1",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "acorn": "^5.7.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
-    "docz": "^0.11.2",
-    "docz-theme-default": "^0.11.2",
-    "enzyme": "^3.6.0",
-    "enzyme-adapter-react-16": "^1.5.0",
+    "docz": "^0.12.5",
+    "docz-theme-default": "^0.12.5",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
     "enzyme-to-json": "^3.3.1",
     "eslint-config-sappira": "^1.6.5",
-    "gh-pages": "^1.1.0",
+    "gh-pages": "^2.0.1",
     "jest": "^23.6.0",
     "jest-styled-components": "^6.2.1",
     "npm-run-all": "^4.1.2",
-    "polished": "^2.0.3",
+    "polished": "^2.2.0",
     "prop-types": "^15.6.1",
-    "react": "^16.5.1",
+    "react": "^16.5.2",
     "react-animations": "^1.0.0",
-    "react-dom": "^16.5.1",
+    "react-dom": "^16.5.2",
     "react-router-dom": "^4.2.2",
-    "react-test-renderer": "^16.5.1",
+    "react-test-renderer": "^16.5.2",
     "rimraf": "^2.6.2",
-    "rollup": "^0.65.2",
+    "rollup": "^0.66.6",
     "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-commonjs": "^9.1.6",
-    "rollup-plugin-filesize": "^4.0.1",
-    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-filesize": "^5.0.1",
     "standard-version": "^4.4.0",
-    "styled-components": "^3.4.6"
+    "styled-components": "^4.0.0"
   },
   "resolutions": {
-    "@babel/core": "^7.0.1",
     "babel-core": "^7.0.0-bridge.0"
   }
 }
