--- a/package.json
+++ b/package.json
@@ -31,15 +31,16 @@
     "lodash": "^4.17.11",
     "popper.js": "^1.14.4",
     "react-portal": "^4.1.5",
-    "react-transition-group": "^2.5.0",
-    "styled-system": "^3.1.11"
-  },
-  "peerDependencies": {
+    "styled-system": "^3.1.11",
     "polished": "^2.0.0",
     "prop-types": "^15.6.1",
-    "react": "^16.2.0",
     "react-animations": "^1.0.0",
+    "react-transition-group": "^2.5.0",
     "styled-components": "^4.0.0"
+  },
+  "peerDependencies": {
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
@@ -61,10 +62,7 @@
     "jest": "^23.6.0",
     "jest-styled-components": "^6.2.1",
     "npm-run-all": "^4.1.2",
-    "polished": "^2.2.0",
-    "prop-types": "^15.6.1",
     "react": "^16.5.2",
-    "react-animations": "^1.0.0",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.5.2",
