--- a/package.json
+++ b/package.json
@@ -29,18 +29,19 @@
   },
   "dependencies": {
     "lodash": "^4.17.11",
-    "popper.js": "^1.14.4",
-    "react-portal": "^4.1.5",
-    "styled-system": "^3.1.11",
+    "mitt": "^1.1.3",
     "polished": "^2.0.0",
+    "popper.js": "^1.14.4",
     "prop-types": "^15.6.1",
     "react-animations": "^1.0.0",
+    "react-portal": "^4.1.5",
     "react-transition-group": "^2.5.0",
-    "styled-components": "^4.0.0"
+    "styled-system": "^3.1.11"
   },
   "peerDependencies": {
     "react": "^16.5.0",
-    "react-dom": "^16.5.0"
+    "react-dom": "^16.5.0",
+    "styled-components": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
@@ -72,7 +73,7 @@
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-filesize": "^5.0.1",
     "standard-version": "^4.4.0",
-    "styled-components": "^4.0.0"
+    "styled-components": "^4.0.3"
   },
   "resolutions": {
     "babel-core": "^7.0.0-bridge.0"
