--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "release": "standard-version && git push --follow-tags"
   },
   "dependencies": {
-    "lodash": "^4.17.11",
     "mitt": "^1.1.3",
     "polished": "^2.0.0",
     "popper.js": "^1.14.7",
@@ -63,8 +62,8 @@
     "jest": "^24.1.0",
     "jest-styled-components": "^6.3.1",
     "npm-run-all": "^4.1.5",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.8.2",
     "rimraf": "^2.6.3",
@@ -73,7 +72,8 @@
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-filesize": "^6.0.1",
     "standard-version": "^5.0.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "yup": "^0.26.10"
   },
   "resolutions": {
     "babel-core": "^7.0.0-bridge.0"
