--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "release": "standard-version && git push --follow-tags"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
     "mitt": "^1.1.3",
     "polished": "^2.0.0",
     "popper.js": "^1.14.7",
