--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "lodash": "^4.17.11",
     "mitt": "^1.1.3",
     "polished": "^2.0.0",
-    "popper.js": "^1.14.7",
     "prop-types": "^15.7.2",
     "react-animations": "^1.0.0",
+    "react-focus-lock": "1.18.3",
     "react-markdown": "^4.0.6",
+    "react-popper": "^1.3.3",
     "react-portal": "^4.2.0",
     "react-transition-group": "^2.5.3",
     "styled-system": "^3.2.1"
@@ -49,24 +50,22 @@
     "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.1.0",
     "docz": "^0.13.7",
     "docz-theme-default": "^0.13.7",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.9.1",
-    "enzyme-to-json": "^3.3.5",
     "eslint-config-sappira": "^2.0.2",
     "gh-pages": "^2.0.1",
     "jest": "^24.1.0",
+    "jest-dom": "^3.1.3",
     "jest-styled-components": "^6.3.1",
     "npm-run-all": "^4.1.5",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.2.2",
-    "react-test-renderer": "^16.8.2",
+    "react-testing-library": "^6.0.0",
     "rimraf": "^2.6.3",
     "rollup": "^1.2.2",
     "rollup-plugin-babel": "^4.3.2",
@@ -75,8 +74,5 @@
     "standard-version": "^4.4.0",
     "styled-components": "^4.1.3",
     "yup": "^0.26.10"
-  },
-  "resolutions": {
-    "babel-core": "^7.0.0-bridge.0"
   }
 }
