--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "release": "standard-version"
   },
   "dependencies": {
+    "cleave.js": "^1.4.10",
+    "libphonenumber-js": "^1.7.13",
     "lodash": "^4.17.11",
     "mitt": "^1.1.3",
     "polished": "^2.0.0",
