--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "docs:build": "rimraf dist && yarn docz build",
     "docs:deploy": "npm run docs:build && gh-pages -d dist",
     "prepublishOnly": "npm-run-all build",
+    "preview": "nodemon -w src -x 'yalc publish --push --changed'",
     "rollup": "rollup -c",
     "test": "jest",
     "lint": "eslint src",
@@ -63,6 +64,7 @@
     "jest": "^24.1.0",
     "jest-dom": "^3.1.3",
     "jest-styled-components": "^6.3.1",
+    "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
