--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "clean": "rimraf lib",
     "watch": "yarn rollup --watch",
     "build": "npm-run-all clean rollup",
-    "docs": "yarn docz dev",
-    "docs:build": "rimraf dist && docz build",
-    "docs:deploy": "npm run docs:build && gh-pages -d dist",
+    "docs": "start-storybook -p 1234",
+    "docs:build": "rimraf dist && build-storybook -o dist",
     "prepublishOnly": "npm-run-all build",
     "preview": "nodemon -w src -x 'yalc publish --push --changed'",
     "rollup": "rollup -c",
@@ -29,7 +28,8 @@
     "release": "standard-version"
   },
   "dependencies": {
-    "cleave.js": "^1.4.10",
+    "@testing-library/react": "^9.1.3",
+    "cleave.js": "~1.4.10",
     "libphonenumber-js": "^1.7.13",
     "lodash": "^4.17.11",
     "mitt": "^1.1.3",
@@ -56,9 +56,16 @@
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-a11y": "5.2.0-beta.40",
+    "@storybook/addon-actions": "5.2.0-beta.40",
+    "@storybook/addon-docs": "5.2.0-beta.40",
+    "@storybook/addon-knobs": "5.2.0-beta.40",
+    "@storybook/addon-links": "5.2.0-beta.40",
+    "@storybook/addon-storysource": "5.2.0-beta.40",
+    "@storybook/addons": "5.2.0-beta.40",
+    "@storybook/react": "5.2.0-beta.40",
     "babel-jest": "^24.1.0",
-    "docz": "^0.13.7",
-    "docz-theme-default": "^0.13.7",
+    "babel-loader": "^8.0.6",
     "eslint-config-sappira": "^2.0.2",
     "gh-pages": "^2.0.1",
     "jest": "^24.1.0",
@@ -69,7 +76,6 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.2.2",
-    "react-testing-library": "^6.0.0",
     "rimraf": "^2.6.3",
     "rollup": "^1.17.0",
     "rollup-plugin-babel": "^4.3.2",
