--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "molekule",
   "description": "React component library built on top of styled-components and styled-system",
-  "version": "4.1.7",
+  "version": "5.0.0-beta.0",
   "main": "lib/molekule.js",
   "module": "lib/molekule.es.js",
   "files": [
