--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "release": "standard-version"
   },
   "dependencies": {
+    "@styled-system/prop-types": "^5.1.2",
     "@testing-library/react": "^9.1.3",
     "cleave.js": "~1.4.10",
     "libphonenumber-js": "^1.7.13",
@@ -41,12 +42,12 @@
     "react-popper": "^1.3.3",
     "react-portal": "^4.2.0",
     "react-transition-group": "^2.5.3",
-    "styled-system": "^3.2.1"
+    "styled-components": "^4.0.0",
+    "styled-system": "^5.1.2"
   },
   "peerDependencies": {
     "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "styled-components": "^4.0.0"
+    "react-dom": "^16.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
@@ -81,8 +82,8 @@
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-filesize": "^6.0.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "standard-version": "^4.4.0",
-    "styled-components": "^4.1.3",
     "yup": "^0.26.10"
   }
 }
