chore: setup chromatic (#113)
* chore: setup chromatic

* Move to github action and move projec token to secrets

* Set env for correct command

* chromatic bump

Co-authored-by: Kyle Alwyn <kjalwyn@gmail.com>

--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
     "build": "npm run clean && babel src --out-dir lib",
     "docs": "start-storybook -p 1234",
     "docs:build": "rimraf dist && build-storybook -o dist",
+    "build-storybook": "rimraf dist && build-storybook -o dist",
     "prepublishOnly": "npm-run-all build",
     "preview": "nodemon -w src -x 'yalc publish --push --changed'",
     "rollup": "rollup -c",
     "test": "jest",
     "lint": "eslint src",
-    "release": "npm run build && standard-version"
+    "release": "npm run build && standard-version",
+    "chromatic": "chromatic"
   },
   "dependencies": {
     "@styled-system/prop-types": "^5.1.2",
     "@testing-library/react": "^9.1.3",
+    "chromatic": "^4.0.2",
     "cleave.js": "~1.4.10",
     "libphonenumber-js": "^1.7.13",
     "lodash": "^4.17.11",
