--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "scripts": {
     "clean": "rimraf lib",
     "watch": "yarn rollup --watch",
-    "build": "npm run clean && babel src --out-dir lib",
+    "build": "npm run clean && babel src --out-dir lib --extensions '.ts,.tsx,.js,.jsx'",
     "docs": "start-storybook -p 1234",
+    "dev": "start-storybook -p 1234",
     "docs:build": "rimraf dist && build-storybook -o dist",
     "build-storybook": "rimraf dist && build-storybook -o dist",
     "prepublishOnly": "npm-run-all build",
@@ -45,7 +46,8 @@
     "react-portal": "^4.2.0",
     "react-transition-group": "^2.5.3",
     "styled-components": "^4.0.0",
-    "styled-system": "^5.1.2"
+    "styled-system": "^5.1.2",
+    "typescript": "^3.7.4"
   },
   "peerDependencies": {
     "react": "^16.8.0",
@@ -57,20 +59,24 @@
     "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-transform-typescript": "^7.9.6",
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "@storybook/addon-a11y": "5.2.0-beta.40",
-    "@storybook/addon-actions": "5.2.0-beta.40",
-    "@storybook/addon-docs": "5.2.0-beta.40",
-    "@storybook/addon-knobs": "5.2.0-beta.40",
-    "@storybook/addon-links": "5.2.0-beta.40",
-    "@storybook/addon-storysource": "5.2.0-beta.40",
-    "@storybook/addons": "5.2.0-beta.40",
-    "@storybook/react": "5.2.0-beta.40",
+    "@storybook/addon-a11y": "5.3.18",
+    "@storybook/addon-actions": "5.3.18",
+    "@storybook/addon-docs": "5.3.18",
+    "@storybook/addon-knobs": "5.3.18",
+    "@storybook/addon-links": "5.3.18",
+    "@storybook/addon-storysource": "5.3.18",
+    "@storybook/addons": "5.3.18",
+    "@storybook/react": "5.3.18",
+    "@types/jest": "^25.2.2",
+    "@types/styled-components": "^5.1.0",
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.6",
-    "eslint-config-sappira": "^2.0.2",
+    "babel-preset-react-app": "^9.1.2",
+    "eslint-config-heydoctor": "^3.1.3",
     "gh-pages": "^2.0.1",
     "jest": "^24.1.0",
     "jest-dom": "^3.1.3",
