--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "dom"
     ],
     "baseUrl": ".",
+    "declaration": true,
     "sourceMap": true,
     "allowJs": true,
     "jsx": "preserve",
