--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "React component library built on top of styled-components and styled-system",
   "version": "5.2.4",
   "main": "lib/index.js",
+  "types": "lib/main.d.ts",
   "files": [
     "lib"
   ],
@@ -72,6 +73,7 @@
     "@storybook/addons": "5.3.18",
     "@storybook/react": "5.3.18",
     "@types/jest": "^25.2.2",
+    "@types/lodash": "^4.14.150",
     "@types/styled-components": "^5.1.0",
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.6",
