--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     ],
     "baseUrl": ".",
     "declaration": true,
+    "declarationDir": "./lib",
     "sourceMap": true,
     "allowJs": true,
     "jsx": "preserve",
