chore: add better types (#110)
* wip

* Defined theme

* Got Icon working

* clean up

* put back logic

* refactor types

* fixes

* took out getClassName

* update lock file

* fix merging

* remove debugger

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
       "dom"
     ],
     "baseUrl": ".",
+    "declaration": true,
+    "declarationDir": "./lib",
     "sourceMap": true,
     "allowJs": true,
     "jsx": "preserve",
