--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "module": "esnext",
     "target": "es5",
+    "outDir": "./lib",
     "lib": [
       "esnext",
       "dom.iterable",
