--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/lodash": "^4.14.150",
     "@types/styled-components": "^5.1.0",
     "@types/yup": "^0.29.4",
+    "@types/styled-system": "^5.1.10",
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.6",
     "babel-preset-react-app": "^9.1.2",
