--- a/package.json
+++ b/package.json
@@ -76,7 +76,9 @@
     "@storybook/react": "5.3.18",
     "@types/jest": "^25.2.2",
     "@types/lodash": "^4.14.150",
+    "@types/storybook__addon-knobs": "^5.2.1",
     "@types/styled-components": "^5.1.0",
+    "@types/yup": "^0.29.4",
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.6",
     "babel-preset-react-app": "^9.1.2",
