--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@storybook/react": "5.3.18",
     "@types/jest": "^25.2.2",
     "@types/lodash": "^4.14.150",
+    "@types/react-transition-group": "^4.4.0",
     "@types/styled-components": "^5.1.0",
     "@types/yup": "^0.29.4",
     "@types/styled-system": "^5.1.10",
